--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,10 @@
-
+<% if @name%>
+<h1> My name is <%= @name %></h1>
+<% end %>
     <div style='border: 3px dashed red'>
       <img src='http://placekitten.com/500/500'>
      </div>
+<form action="/named-cat">
+  <input type="text" name="name">
+  <input type="submit" value="Submit">
+</form>
